--- a/app/src/main/res/layout/customtoast.xml
+++ b/app/src/main/res/layout/customtoast.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/custom_toast_layout"  android:orientation="vertical"  android:background="#23F1B0">
@@ -13,10 +14,10 @@
         android:text="JavaTpoint custom Toast" />
 
     <ImageView
-        android:id="@+id/custom_toast_image"
-        android:layout_width="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="Hello world"
-        android:src="@drawable/custom" />
+        app:srcCompat="@drawable/android" />
+
 
 </LinearLayout>
